--- a/wsearch/src/app/page-list/page-list.component.html
+++ b/wsearch/src/app/page-list/page-list.component.html
@@ -8,9 +8,14 @@
   </thead>
   <tbody>
     <tr *ngFor="let page of pages">
-      <td>{{page['title']}}</td>
+      <td>
+        <a target="_blank" [href]="'https://en.wikipedia.org?curid='+page['pageid']">
+          {{page['title']}}
+        </a>
+      </td>
+
       <td>{{page['wordcount']}}</td>
-      {{page['snippet']}}
+      <td [innerHTML]="page['snippet']"></td>
     </tr>
   </tbody>
 </table>
